# nagios-otel

./: README.md  host_example.py  pyproject.toml
examples/: host_example.py  service_example.py
nagios_otel/: otel.py  perfdata.py
